<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>ros2_examples</name>

  <version>1.0.0</version>
  <description>MRS ROS2 UAV example</description>

  <author email="tomas.baca@fel.cvut.cz">klaxalk</author>
  <maintainer email="tomas.baca@fel.cvut.cz">klaxalk</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>builtin_interfaces</depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>ros2_lib</depend>
  <depend>mrs_lib</depend>

  <!-- this is needed to be able to run launch files -->
  <depend>ros2_examples_py</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
