<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>example_waypoint_flier_simple</name>

  <version>1.0.0</version>

  <description>Example for the Simple Waypoint Flier</description>

  <maintainer email="hertdani@fel.cvut.cz">Daniel Hert</maintainer>
  <author email="hertdani@fel.cvut.cz">Daniel Hert</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
